tests/baselines/reference/es6ImportDefaultBindingWithExport.errors.txt
client.ts(1,1): error TS1191: An import declaration cannot have modifiers.
client.ts(3,1): error TS1191: An import declaration cannot have modifiers.


==== server.ts (0 errors) ====
    var a = 10;
    export default a;
    
==== client.ts (2 errors) ====
    export import defaultBinding from "server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var x = defaultBinding;
    export import defaultBinding2 from "server"; // non referenced
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.